--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -386,6 +386,8 @@
     "\n",
     "我们可以使用栅格化方法，利用该方法能够将研究区域划分为等长宽的正方形栅格，也能够经过简单的数学运算将数据点与其所在的栅格进行对应。在这一节中将用代码实现栅格化，对研究范围生成栅格，并对出租车的空间信息进行集计处理。\n",
     "\n",
+    "那么什么是栅格化方法呢？\n",
+    "\n",
     "**为什么数据需要栅格化？**\n",
     "\n",
     "栅格数据在空间分析方面具有矢量数据无法比拟的优势：栅格空间数据的叠置和组合更方便，利用栅格数据更容易进行各类空间分析。\n",
@@ -400,7 +402,27 @@
     "\n",
     "答案是，以矢量数据形式存储栅格数据。栅格本质上就是一个一个有面积的小格子，我们把这些小格子变成一个一个的矢量图形，就可以在 `GeoPandas` 中处理了。\n",
     "\n",
-    "那么，首先就需要对研究范围创建栅格，我们将这个步骤称为栅格化，有时候在ArcGIS中叫做“创建渔网”或“网格化”，创建出来的栅格英文称为Grid、Cell、Fishnet等。需要注意的是，这里的栅格实质上是矢量图形，与栅格数据形式有一定区别。"
+    "那么，首先就需要对研究范围创建栅格，我们将这个步骤称为栅格化，在ArcGIS中叫做“创建渔网”或“网格化”，创建出来的栅格英文称为Grid、Cell、Fishnet等。需要注意的是，这里的栅格实质上是矢量图形，与栅格数据形式有一定区别。\n",
+    "\n",
+    "**栅格化的基本原理**\n",
+    "\n",
+    "如何进行栅格化呢？在进行栅格化时，需要考虑的有以下两个问题：\n",
+    "\n",
+    "1. 给定研究范围以及栅格大小，如何生成研究范围内所有栅格的地理信息几何图形？对第一个问题，给定研究范围以及栅格大小，栅格化即是对整个研究范围铺满栅格，而要以矢量图形来存储栅格数据，则需要推算出整个研究范围内所有栅格的四个顶点坐标。有了每个栅格的顶点坐标后，就可以构建出每个栅格的几何图形 `Polygon` ，存放到同一个 `GeoDataFrame` 中。\n",
+    "2. 如何将手中的GPS数据以最小的计算量、以最快的方式对应到栅格上？对第二个问题，我们拿到的GPS数据一般是以经纬度形式存储，且经常会遇到百万以上的数量级。如果对每个GPS数据点都需要用复杂的空间连接匹配到栅格上，则需要耗费大量的时间。\n",
+    "\n",
+    "综合以上两点，栅格方法的思路即是直接对经纬度进行加减乘除运算。对第一个问题，给定研究范围与栅格大小，推算出栅格的长与宽对应的经度$\\Delta\\text{lon}$和纬度$\\Delta\\text{lat}$，再通过每个栅格的编号推算出四个顶点坐标。对第二个问题，则只需要通过简单的加减乘除即可将GPS经纬度对应到栅格，在Python中可以用向量运算解决。相比空间连接匹配，这种向量计算的方法能够极大地提高GPS对应栅格的效率。\n",
+    "\n",
+    "解决第二个问题，给定研究范围内\n",
+    "\n",
+    "**栅格化方法的优势是什么呢？**\n",
+    "\n",
+    "ArcGIS里面也可以生成栅格（网格、渔网），为什么还要在Python中去生成呢？可否在ArcGIS里面生成栅格，再导入进Python呢？前面提到过，在栅格化要解决两个问题：生成研究范围的栅格和将数据快速对应至栅格。如果借助其他栅格化工具创建栅格，则只能解决其中的第一个问题，第二个问题则需要对大规模的GPS数据进行空间连接，耗费大量计算资源。而使用Python进行栅格化，只要做一个简单的加减乘除运算就可以将所有经纬度对应到各自的栅格，空间对应所需的计算量极低，在应对大规模数据的情况下是非常实用的。\n",
+    "\n",
+    "由于是在地理坐标系上划分栅格，这种栅格化方法不可避免地会造成一定的精度损失，具体来说有以下因素：\n",
+    "\n",
+    "- 一方面由于纬线的周长与纬度大小相关，以研究区域的纬度最小值与最大值处为基准计算的$\\Delta\\text{lat}$应该是不同的，即不同栅格的$\\Delta\\text{lat}$应该不同。\n",
+    "- 另一方面，这一栅格划分法也将地球假设为一个完美的球，而实际上地球更接近于一个椭球。如果追求更加精准的栅格划分方法，则应该在投影坐标系上进行划分。交通大数据中，一方面，研究范围一般在某一国家中，在单个城市或者几个城市的小范围内，这种近似带来的误差基本可以忽略不计；另一方面，GPS设备所产生的数据点一般会有 `10m` 左右的误差，栅格划分精确度的提高并不能保证GPS数据分析的精确度提升。栅格划分法通过牺牲一定的精确度，换取了计算速度的极大提高。"
    ],
    "metadata": {
     "collapsed": false
