--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "**具体怎么栅格化呢？**\n",
     "\n",
-    "解决第一个问题，首先以研究范围中心点所在位置为基准，近似的计算每个栅格对应的经纬度$\\Delta\\text{lon}$和$\\Delta\\text{lat}$的大小。如果将地球看成一个球，所有的经线周长都相同，而纬线的周长则在赤道时最长（此时与经线一样长），越往两极去，纬线的周长越小。也就是说，除非研究范围在赤道上，否则研究范围内栅格的$\\Delta\\text{lon}$和$\\Delta\\text{lat}$是不等的。假设地球半径为 `R` ，研究范围左下角经纬度为$(\\text{lon}_1, \\text{lat}_1)$，右上角坐标为$(\\text{lon}_2, \\text{lat}_2)$，则中心点的坐标为$(\\text{lon}, \\text{lat})=(\\frac{\\text{lon}_1+\\text{lon}_2}{2}, \\frac{\\text{lat}_1+\\text{lat}_2}{2})$。在研究范围处，经线的周长为 `2πR` ，对应经度的 `360°` ；纬线的周长则为 `2πRcos(lat)` ，对应纬度的 `360°` 。那么如果栅格长度为 `a` ，对应的经纬度是多少呢？\n",
+    "**解决第一个问题**，首先以研究范围中心点所在位置为基准，近似的计算每个栅格对应的经纬度$\\Delta\\text{lon}$和$\\Delta\\text{lat}$的大小。如果将地球看成一个球，所有的经线周长都相同，而纬线的周长则在赤道时最长（此时与经线一样长），越往两极去，纬线的周长越小。也就是说，除非研究范围在赤道上，否则研究范围内栅格的$\\Delta\\text{lon}$和$\\Delta\\text{lat}$是不等的。假设地球半径为 `R` ，研究范围左下角经纬度为$(\\text{lon}_1, \\text{lat}_1)$，右上角坐标为$(\\text{lon}_2, \\text{lat}_2)$，则中心点的坐标为$(\\text{lon}, \\text{lat})=(\\frac{\\text{lon}_1+\\text{lon}_2}{2}, \\frac{\\text{lat}_1+\\text{lat}_2}{2})$。在研究范围处，经线的周长为 `2πR` ，对应经度的 `360°` ；纬线的周长则为 `2πRcos(lat)` ，对应纬度的 `360°` 。那么如果栅格长度为 `a` ，对应的经纬度是多少呢？\n",
     "\n",
     "$$\n",
     "\\Delta\\text{lon}=\\frac{a}{2\\pi R}*360°\n",
@@ -450,12 +450,12 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{右下角顶点坐标} = (\\text{hblon}_i-\\frac{\\Delta\\text{lon}}{2}, \\text{hblat}_{j+1}-\\frac{\\Delta\\text{lat}}{2})\n",
+    "\\text{左上角顶点坐标} = (\\text{hblon}_i-\\frac{\\Delta\\text{lon}}{2}, \\text{hblat}_{j+1}-\\frac{\\Delta\\text{lat}}{2})\n",
     "$$\n",
     "\n",
     "通过上面的公式对每一个栅格的顶点进行计算，循环生产栅格，即可生产整个研究范围的栅格。\n",
     "\n",
-    "解决第二个问题，给定研究范围内的任意一点经纬度 `(x, y)` ，只需要计算x和y距离最左下角的$\\text{lon}_1-\\frac{\\Delta\\text{lon}}{2}$和$\\text{lat}_1-\\frac{\\Delta\\text{lat}}{2}$经过了多少个$\\Delta\\text{lon}$和$\\Delta\\text{lat}$即可，可以用以下公式对应至所属的栅格编号（$\\lfloor\\rfloor$表示向下取整）。\n",
+    "**解决第二个问题**，给定研究范围内的任意一点经纬度 `(x, y)` ，只需要计算x和y距离最左下角的$\\text{lon}_1-\\frac{\\Delta\\text{lon}}{2}$和$\\text{lat}_1-\\frac{\\Delta\\text{lat}}{2}$经过了多少个$\\Delta\\text{lon}$和$\\Delta\\text{lat}$即可，可以用以下公式对应至所属的栅格编号（$\\lfloor\\rfloor$表示向下取整）。\n",
     "\n",
     "$$\n",
     "\\text{loncol}=\\lfloor\\frac{x-(\\text{lon}_1-\\frac{\\Delta\\text{lon}}{2})}{\\Delta\\text{lon}}\\rfloor\n",
