--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -1508,21 +1508,29 @@
    ],
    "source": [
     "# 计算起点对应的栅格经纬度编号\n",
-    "oddata['SLONCOL'] = ((oddata['SLng'] - (lonStart - deltaLon / 2))/deltaLon).astype('int')\n",
-    "oddata['SLATCOL'] = ((oddata['SLat'] - (latStart - deltaLat / 2))/deltaLat).astype('int')\n",
+    "oddata['SLONCOL'] = (\n",
+    "            (oddata['SLng'] - (lonStart - deltaLon / 2)) / deltaLon).astype(\n",
+    "    'int')\n",
+    "oddata['SLATCOL'] = (\n",
+    "            (oddata['SLat'] - (latStart - deltaLat / 2)) / deltaLat).astype(\n",
+    "    'int')\n",
     "# 计算终点对应的栅格经纬度编号\n",
-    "oddata['ELONCOL'] = ((oddata['ELng'] - (lonStart - deltaLon / 2))/deltaLon).astype('int')\n",
-    "oddata['ELATCOL'] = ((oddata['ELat'] - (latStart - deltaLat / 2))/deltaLat).astype('int')\n",
+    "oddata['ELONCOL'] = (\n",
+    "            (oddata['ELng'] - (lonStart - deltaLon / 2)) / deltaLon).astype(\n",
+    "    'int')\n",
+    "oddata['ELATCOL'] = (\n",
+    "            (oddata['ELat'] - (latStart - deltaLat / 2)) / deltaLat).astype(\n",
+    "    'int')\n",
     "# 剔除起终点在一个栅格内的记录\n",
-    "oddata = oddata[-((oddata['SLONCOL']==oddata['ELONCOL'])&\n",
-    "                  (oddata['SLATCOL']==oddata['ELATCOL']))]\n",
+    "oddata = oddata[-((oddata['SLONCOL'] == oddata['ELONCOL']) &\n",
+    "                  (oddata['SLATCOL'] == oddata['ELATCOL']))]\n",
     "# 剔除不在研究范围内的OD记录\n",
-    "oddata = oddata[(oddata['SLONCOL']>=0)&(oddata['SLATCOL']>=0)&\n",
-    "                (oddata['ELONCOL']>=0)&(oddata['ELATCOL']>=0)&\n",
-    "                (oddata['SLONCOL']<=lonsnum)&\n",
-    "                (oddata['SLATCOL']<=latsnum)&\n",
-    "                (oddata['ELONCOL']<=lonsnum)&\n",
-    "                (oddata['ELATCOL']<=latsnum)]\n",
+    "oddata = oddata[(oddata['SLONCOL'] >= 0) & (oddata['SLATCOL'] >= 0) &\n",
+    "                (oddata['ELONCOL'] >= 0) & (oddata['ELATCOL'] >= 0) &\n",
+    "                (oddata['SLONCOL'] <= lonsnum) &\n",
+    "                (oddata['SLATCOL'] <= latsnum) &\n",
+    "                (oddata['ELONCOL'] <= lonsnum) &\n",
+    "                (oddata['ELATCOL'] <= latsnum)]\n",
     "# 列数比较多，转置方便查看\n",
     "oddata.iloc[:5].T"
    ],
@@ -1563,7 +1571,8 @@
    ],
    "source": [
     "# 对以起终点栅格编号列为依据集计订单数量\n",
-    "OD = oddata.groupby(['SLONCOL','SLATCOL','ELONCOL','ELATCOL'])['VehicleNum'].count().rename('count').reset_index()\n",
+    "OD = oddata.groupby(['SLONCOL', 'SLATCOL', 'ELONCOL', 'ELATCOL'])[\n",
+    "    'VehicleNum'].count().rename('count').reset_index()\n",
     "# 起点栅格中心点经纬度\n",
     "OD['SHBLON'] = OD['SLONCOL'] * deltaLon + (lonStart - deltaLon / 2)\n",
     "OD['SHBLAT'] = OD['SLATCOL'] * deltaLat + (latStart - deltaLat / 2)\n",
@@ -1571,7 +1580,7 @@
     "OD['EHBLON'] = OD['ELONCOL'] * deltaLon + (lonStart - deltaLon / 2)\n",
     "OD['EHBLAT'] = OD['ELATCOL'] * deltaLat + (latStart - deltaLat / 2)\n",
     "# 排序，将count值大的OD排在最下\n",
-    "OD = OD.sort_values(by = 'count')\n",
+    "OD = OD.sort_values(by='count')\n",
     "OD"
    ],
    "metadata": {
@@ -1621,15 +1630,16 @@
    ],
    "source": [
     "# 绘制OD\n",
-    "fig = plt.figure(1,(10,8),dpi = 250)\n",
-    "ax  = plt.subplot(111)\n",
+    "fig = plt.figure(1, (10, 8), dpi=250)\n",
+    "ax = plt.subplot(111)\n",
     "plt.sca(ax)\n",
     "# 绘制地图底图，设置两者均在ax上绘制\n",
-    "grid_sz.plot(ax =ax,edgecolor = (0,0,0,0.8),facecolor = (0,0,0,0),linewidths=0.2)\n",
-    "sz.plot(ax = ax,edgecolor = (0,0,0,1),facecolor = (0,0,0,0),linewidths=0.5)\n",
+    "grid_sz.plot(ax=ax, edgecolor=(0, 0, 0, 0.8), facecolor=(0, 0, 0, 0),\n",
+    "             linewidths=0.2)\n",
+    "sz.plot(ax=ax, edgecolor=(0, 0, 0, 1), facecolor=(0, 0, 0, 0), linewidths=0.5)\n",
     "vmax = OD['count'].max()\n",
     "# 设定一个标准化的工具，设定OD的colormap最大最小值，他的作用是norm(count)就会将count标准化到0-1的范围内\n",
-    "norm = mpl.colors.Normalize(vmin=0,vmax=vmax)\n",
+    "norm = mpl.colors.Normalize(vmin=0, vmax=vmax)\n",
     "# 设定colormap的颜色\n",
     "cmapname = 'autumn_r'\n",
     "# cmap是一个获取颜色的工具，cmap(a)会返回颜色，其中a是0-1之间的值\n",
@@ -1638,8 +1648,9 @@
     "for i in range(len(OD)):\n",
     "    r = OD.iloc[i]\n",
     "    count = r['count']\n",
-    "    linewidth = 1.5*(count/OD['count'].max())\n",
-    "    plt.plot([r['SHBLON'],r['EHBLON']],[r['SHBLAT'],r['EHBLAT']],linewidth = linewidth,color = cmap(norm(count)))\n",
+    "    linewidth = 1.5 * (count / OD['count'].max())\n",
+    "    plt.plot([r['SHBLON'], r['EHBLON']], [r['SHBLAT'], r['EHBLAT']],\n",
+    "             linewidth=linewidth, color=cmap(norm(count)))\n",
     "# 隐藏坐标轴\n",
     "plt.axis('off')\n",
     "plt.show()"
@@ -1688,7 +1699,8 @@
    ],
    "source": [
     "# 遍历生成OD的LineString对象，并赋值给geometry列\n",
-    "OD['geometry'] = OD.apply(lambda r:LineString([[r['SHBLON'],r['SHBLAT']],[r['EHBLON'],r['EHBLAT']]]),axis = 1)\n",
+    "OD['geometry'] = OD.apply(lambda r: LineString(\n",
+    "    [[r['SHBLON'], r['SHBLAT']], [r['EHBLON'], r['EHBLAT']]]), axis=1)\n",
     "# 转换为GeoDataFrame\n",
     "OD = gpd.GeoDataFrame(OD)\n",
     "# 绘制看看是否能够识别图形信息\n",
@@ -1726,11 +1738,12 @@
    ],
    "source": [
     "# 创建图框\n",
-    "fig = plt.figure(1,(10,8),dpi = 250)\n",
+    "fig = plt.figure(1, (10, 8), dpi=250)\n",
     "ax = plt.subplot(111)\n",
     "# 绘制栅格与行政区划边界\n",
-    "grid_sz.plot(ax = ax,edgecolor = (0,0,0,0.8),facecolor = (0,0,0,0),linewidths=0.2)\n",
-    "sz.plot(ax = ax,edgecolor = (0,0,0,1),facecolor = (0,0,0,0),linewidths=0.5)\n",
+    "grid_sz.plot(ax=ax, edgecolor=(0, 0, 0, 0.8), facecolor=(0, 0, 0, 0),\n",
+    "             linewidths=0.2)\n",
+    "sz.plot(ax=ax, edgecolor=(0, 0, 0, 1), facecolor=(0, 0, 0, 0), linewidths=0.5)\n",
     "# 设置colormap的数据\n",
     "vmax = OD['count'].max()\n",
     "cmapname = 'autumn_r'\n",
@@ -1740,14 +1753,14 @@
     "plt.title('count')\n",
     "plt.sca(ax)\n",
     "# 绘制OD\n",
-    "OD.plot(ax = ax,column = 'count', # 指定在ax上绘制，并指定颜色映射的列\n",
-    "        linewidth = 1.5*(OD['count']/OD['count'].max()), # 指定线宽\n",
-    "        cmap = cmap,vmin = 0,vmax = vmax, # 设置OD的颜色\n",
-    "        legend=True,cax = cax) # 设置绘制色标\n",
+    "OD.plot(ax=ax, column='count',  # 指定在ax上绘制，并指定颜色映射的列\n",
+    "        linewidth=1.5 * (OD['count'] / OD['count'].max()),  # 指定线宽\n",
+    "        cmap=cmap, vmin=0, vmax=vmax,  # 设置OD的颜色\n",
+    "        legend=True, cax=cax)  # 设置绘制色标\n",
     "# 隐藏边框，并设定显示范围\n",
     "plt.axis('off')\n",
-    "plt.xlim(113.6,114.8)\n",
-    "plt.ylim(22.4,22.9)\n",
+    "plt.xlim(113.6, 114.8)\n",
+    "plt.ylim(22.4, 22.9)\n",
     "# 显示图\n",
     "plt.show()"
    ],
